[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/DU-assets/Creatures/Cell Jr.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Cell.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=7]
radius = 13.0
height = 10.0

[node name="Cell" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="HitFlash" type="Timer" parent="."]
wait_time = 0.2

[node name="KnockBack" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="HitFlash" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="KnockBack" to="." method="_on_KnockBack_timeout"]
